# glm

./: .gitignore  README.md  environment.yml  glm.py  glm_types.py  model_playground.ipynb  model_testing.ipynb  plot_playground.ipynb  plotter.py  r_plotter.py  research.ipynb  setup.cfg  simulate.py  simulate_summaries.py  summarize.py
pkg/: README.md
pkg/src/lens/: __init__.py  app.py
sandbox/: model_sklearn_data.py  simulate_summaries.py  single_model_example.py
src/lens-model/: app.py  glm_estimator.py
src/lens_model/: __init__.py  app.py
src/model_lens/: app.py  glm_estimator.py
utils/: glm_summary_types.py  misc.py  simulate.py  summarize.py
