[metadata]
name = lens-model-cith
version = 0.0.1
author = Jose Torres
author_email = jat055000@gmail.com
description = Hobby package to upload model summaries to backend
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/gittorres/lens.git
project_urls =
    Bug Tracker = https://github.com/GitTorres/lens-analysis/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7

[options.packages.find]
where = src